# Wordle

./: README.md
archive/: helper.py  main.py  pyproject.toml
wordle/: pyproject.toml
wordle/src/wordle/: __init__.py  helpers.py  schema.sql  wordle.db
wordle/src/wordle/templates/: index.html  result.html  winner.html  wordguess.html
